[project]
name = "easimage"
description = "Image and video management for research use, in an unified easy to use API"
authors = [
    { name = "Timothe Jost-Mousseau", email = "timothe.jost-mousseau@pasteur.com" },
]
url = "https://github.com/JostTim/pImage"
dependencies = [
    "numpy>=1.23",
    "opencv-python>=4.6",
    "ffmpeg>=1.4",
    "tifffile>=2022.10",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "pImage/__init__.py"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F403", "E401"]

[tool.ruff]
line-length = 120
